# audient-evo-python

./: .gitignore  AGENTS.md  LICENSE  PROTOCOL.md  README.md  pyproject.toml
.github/workflows/: publish.yml
audient_evo/: __init__.py  device.py  protocol.py  state.py  transport.py  util.py  worker.py
udev/: 80-audient-evo.rules
